--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>A new line in our file!</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>push to github</p>
-  <p>this is 2nd time pulling to git</p>
+<p>this is pushing 2nd time to github</p>
 
 </body>
 </html>
